<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/insertDataScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".InsertData" >
	
	    <TextView
	        android:id="@+id/displayDateInfo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginLeft="5dp"
	        android:layout_marginTop="15dp"
	        android:text="@string/insertData_dateInfo" />
	    
		<RadioGroup
	        android:id="@+id/radioSelGasType"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_alignLeft="@+id/displayDateInfo"
	        android:layout_below="@+id/displayDateInfo"
	        android:layout_marginTop="20dp"
	        android:orientation="horizontal" >
		    <RadioButton
		        android:id="@+id/radioButtonGas"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/insertData_Gas" />
		
		    <RadioButton
		        android:id="@+id/radioButtonAlc"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/insertData_Alc" />
		</RadioGroup>
		
	    <TextView
	        android:id="@+id/textGasValue"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/radioSelGasType"
	        android:layout_below="@+id/radioSelGasType"
	        android:layout_marginTop="20dp"
	        android:text="@string/insertData_GasValue" />
	
	    <EditText
	        android:id="@+id/editGasValue"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/textGasValue"
	        android:layout_alignBottom="@+id/textGasValue"
	        android:layout_alignLeft="@+id/editTotalKM"
	        android:ems="10"
	        android:inputType="numberDecimal" >
	    </EditText>
	
	    <TextView
	        android:id="@+id/textTotalValue"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textGasValue"
	        android:layout_below="@+id/textGasValue"
	        android:layout_marginTop="20dp"
	        android:text="@string/insertData_TotalValue" />
	
	    <EditText
	        android:id="@+id/editTotalValue"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/textTotalValue"
	        android:layout_alignBottom="@+id/textTotalValue"
	        android:layout_alignLeft="@+id/editTotalKM"
	        android:ems="10"
	        android:inputType="numberDecimal" />
	
	    <TextView
	        android:id="@+id/textTotalKM"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textTotalValue"
	        android:layout_below="@+id/editTotalValue"
	        android:layout_marginTop="20dp"
	        android:text="@string/insertData_TotalKMValue" />
	
	    <EditText
	        android:id="@+id/editTotalKM"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/textTotalKM"
	        android:layout_alignBottom="@+id/textTotalKM"
	        android:layout_toRightOf="@+id/textTotalKM"
	        android:ems="10"
	        android:inputType="numberDecimal" />
	
	    <Button
	        android:id="@+id/buttonSaveData"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textTotalKM"
	        android:layout_below="@+id/editTotalKM"
	        android:layout_marginTop="20dp"
	        android:text="@string/insertData_SaveButton" />
	
	</RelativeLayout>
</ScrollView>	